# rusty-caravel

./: .gitignore  Cargo.toml  README.md
.cargo/: config
cross-compiling-tools/: .gitattributes
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/caravel/: all.html  fn.main.html  index.html  sidebar-items.js
docs/caravel/actors/: index.html  sidebar-items.js
docs/caravel/actors/commands/: enum.CanCommand.html  enum.ParsedCommand.html  fn.parse.html  index.html  sidebar-items.js  struct.Receive.html  struct.Send.html
docs/caravel/actors/ctrlc/: fn.run.html  index.html  sidebar-items.js  struct.CtrlCActor.html  struct.CtrlCActorHandle.html
docs/caravel/actors/receiver_can/: enum.ReceiverCANMessages.html  fn.run.html  index.html  sidebar-items.js  struct.ReceiverCANHandle.html  struct.ReceiverCan.html
docs/caravel/actors/sender_can/: enum.SenderCANMessages.html  fn.run.html  index.html  sidebar-items.js  struct.SenderCAN.html  struct.SenderCANHandle.html
docs/caravel/actors/stdin/: enum.BossCommand.html  fn.reading_stdin_lines.html  fn.run.html  index.html  sidebar-items.js  struct.StdInLines.html  (+1 more)
docs/caravel/util/: index.html  sidebar-items.js
docs/implementors/structopt/: trait.StructOpt.js
docs/src/caravel/: main.rs.html
scripts/: build.ps1  deploy.ps1  docs.ps1
src/: main.rs
src/actors/: can_handler.rs  commands.rs  commands_old.rs  ctrlc.rs  mod.rs  monitor.rs  receiver_can.rs  sender_can.rs  simulation.rs  stdin.rs
src/util/: commands.rs  mod.rs
src/util/can/: socketcan.rs  windowscan.rs
(+21 files in other folders)
