[package]
name = "caravel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1"
anyhow = "1.0.32"
clap = "2.33.2"
structopt = "0.3.16"
shell-words = "1.0.0"
